Added 2 additional buttons.

--- a/Secret Project/Main.storyboard
+++ b/Secret Project/Main.storyboard
@@ -179,6 +179,16 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ahn-nw-KcD">
+                                <rect key="frame" x="329" y="36" width="30" height="30"/>
+                                <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" image="search"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2WQ-bS-cv3">
+                                <rect key="frame" x="16" y="36" width="30" height="30"/>
+                                <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" image="menu"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -186,10 +196,14 @@
                             <constraint firstAttribute="trailing" secondItem="6aJ-45-chj" secondAttribute="trailing" id="AVO-4s-2D0"/>
                             <constraint firstItem="6aJ-45-chj" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Ggp-hc-pgO"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="M5E-HD-l00" secondAttribute="bottom" constant="16" id="Ii7-90-dPQ"/>
+                            <constraint firstItem="2WQ-bS-cv3" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="16" id="Qov-Y5-vrj"/>
+                            <constraint firstItem="2WQ-bS-cv3" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="16" id="Z5o-ng-JmY"/>
                             <constraint firstAttribute="trailing" secondItem="M5E-HD-l00" secondAttribute="trailing" constant="16" id="a1N-cJ-b7Z"/>
                             <constraint firstItem="6aJ-45-chj" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="dwc-NJ-EIo"/>
                             <constraint firstItem="6aJ-45-chj" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="kYC-29-yP4"/>
+                            <constraint firstItem="Ahn-nw-KcD" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="16" id="lad-yr-OIj"/>
                             <constraint firstItem="Nh3-ev-pvy" firstAttribute="centerX" secondItem="M5E-HD-l00" secondAttribute="centerX" id="zXI-0x-gCD"/>
+                            <constraint firstAttribute="trailing" secondItem="Ahn-nw-KcD" secondAttribute="trailing" constant="16" id="zpn-oi-yUe"/>
                         </constraints>
                     </view>
                     <connections>
@@ -206,7 +220,9 @@
         <image name="bg" width="414" height="736"/>
         <image name="clock" width="30" height="30"/>
         <image name="f-a-b" width="60" height="60"/>
+        <image name="menu" width="30" height="30"/>
         <image name="message" width="30" height="30"/>
         <image name="pencil" width="30" height="30"/>
+        <image name="search" width="30" height="30"/>
     </resources>
 </document>
